welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
makes10:2: error: value or is not a member of Boolean
  if (a==10 or b==10) {
            ^